# PXView

./: .gitignore  CMakeLists.txt  INSTALL  INSTALL.md  INSTALL_zh.md  NEWS25  NEWS31  PXView.icns  PXView.qrc  README.md  build_deb_package  build_linux  build_mac.sh  build_mac_icon.sh  cmake_clear  更新说明.txt
PXView/: PXView.desktop  PXView.qrc  PXView.qrc.depends  README  application.cpp  application.h  config.h  config.h.in  main.cpp  mystyle.h  px.rules  stylesheet.qss
PXView/demo/logic/: protocol.demo
PXView/pv/: ZipMaker.cpp  ZipMaker.h  appcontrol.cpp  appcontrol.h  deviceagent.cpp  deviceagent.h  dstimer.cpp  dstimer.h  dsvdef.cpp  dsvdef.h  eventobject.cpp  eventobject.h  log.cpp  log.h  mainframe.cpp  mainframe.h  mainwindow.cpp  mainwindow.h  sessionmanager.cpp  sessionmanager.h  sigsession.cpp  sigsession.h  storesession.cpp  storesession.h  submainframe.cpp  submainframe.h  tabcontext.cpp  tabcontext.h  winnativewidget.cpp  winnativewidget.h  winshadow.cpp  winshadow.h  wintaskbarprogress.cpp  wintaskbarprogress.h
PXView/pv/api/: app_service.cpp  app_service.h  direct_transport.h  iapp_service.h  isession_service.h  mcp_transport.cpp  mcp_transport.h  rpc_dispatcher.cpp  rpc_dispatcher.h  session_service.cpp  session_service.h  transport.h  types.h  ws_transport.cpp  ws_transport.h
PXView/pv/config/: appconfig.cpp  appconfig.h  shortcutdefs.cpp  shortcutdefs.h
PXView/pv/data/: analogsnapshot.cpp  analogsnapshot.h  datasource.h  decodermodel.cpp  decodermodel.h  decoderstack.cpp  decoderstack.h  disk_buffer_manager.cpp  disk_buffer_manager.h  disk_cache_config.h  disk_read_cache.cpp  disk_read_cache.h  disk_write_thread.cpp  disk_write_thread.h  dsosnapshot.cpp  dsosnapshot.h  leaf_block_pool.h  logicsnapshot.cpp  logicsnapshot.h  mathstack.cpp  mathstack.h  mmap_allocator.cpp  mmap_allocator.h  sessiondocument.cpp  sessiondocument.h  sessionsnapshot.cpp  sessionsnapshot.h  signaldata.cpp  signaldata.h  snapshot.cpp  snapshot.h  spectrumstack.cpp  spectrumstack.h
PXView/pv/dialogs/: about.cpp  about.h  applicationpardlg.cpp  applicationpardlg.h  calibration.cpp  calibration.h  decoderoptionsdlg.cpp  decoderoptionsdlg.h  deviceoptions.cpp  deviceoptions.h  dsdialog.cpp  dsdialog.h  dsmessagebox.cpp  dsmessagebox.h  dsomeasure.cpp  dsomeasure.h  fftoptions.cpp  fftoptions.h  interval.cpp  interval.h  lissajousoptions.cpp  lissajousoptions.h  mathoptions.cpp  mathoptions.h  protocolexp.cpp  protocolexp.h  protocollist.cpp  protocollist.h  regionoptions.cpp  regionoptions.h  search.cpp  search.h  shadow.cpp  shadow.h  storeprogress.cpp  storeprogress.h  waitingdialog.cpp  waitingdialog.h
PXView/pv/dock/: deviceoptionsdock.cpp  deviceoptionsdock.h  dsotriggerdock.cpp  dsotriggerdock.h  keywordlineedit.cpp  keywordlineedit.h  logdock.cpp  logdock.h  mcpcontroldock.cpp  mcpcontroldock.h  measuredock.cpp  measuredock.h  protocoldock.cpp  protocoldock.h  protocolitemlayer.cpp  protocolitemlayer.h  searchcombobox.cpp  searchcombobox.h  searchdock.cpp  searchdock.h  signalprocessingdock.cpp  signalprocessingdock.h  triggerdock.cpp  triggerdock.h
PXView/pv/interface/: icallbacks.h  icontextaware.h
PXView/pv/prop/: bool.cpp  bool.h  double.cpp  double.h  enum.cpp  enum.h  int.cpp  int.h  property.cpp  property.h  string.cpp  string.h
PXView/pv/toolbars/: filebar.cpp  filebar.h  logobar.cpp  logobar.h  samplingbar.cpp  samplingbar.h  titlebar.cpp  titlebar.h  trigbar.cpp  trigbar.h
PXView/pv/ui/: dockfonts.h  draggabletabbar.cpp  draggabletabbar.h  draggabletabwidget.cpp  draggabletabwidget.h  dscombobox.cpp  dscombobox.h  dsspinbox.cpp  dsspinbox.h  fn.cpp  fn.h  iconcache.cpp  iconcache.h  langresource.cpp  langresource.h  msgbox.cpp  msgbox.h  popupdlglist.cpp  popupdlglist.h  string_ids.h  toast.cpp  toast.h  uimanager.cpp  (+5 more)
PXView/res/: DSCope1.def.pxc  DSCope2.def.pxc  DSLogic0.def.pxc  PX_Logic0.def.pxc
PXView/src/: basedef.h  config.h  config.h.in  log.cpp  log.h  main.cpp  mystyle.h
PXView/themes/: atom.json  ayu.json  breeze.qrc  dark.json  dark.qss  dark_cards.json  light.json  light.qss  light_cards.json  theme-schema.json  theme.qss
common/: ds_types.h
common/log/: xlog.c  xlog.h
common/mem/: alloc.c  alloc.h
debian/: changelog  control  rules
doc/: Decoder develop base course.docx  MCP与Web客户端使用指南.md  NEWS25  NEWS31  c-decoder-from-spec-guide.md  c-decoder-guide.md  c-decoder-testing.md  decoder.txt
lang/cn/: dlg.json  dsl_channel.json  dsl_label.json  dsl_list.json  msg.json  signal_proc.json  toolbar.json
lang/en/: dlg.json  msg.json  signal_proc.json  toolbar.json
lang/traditional/: dlg.json  dsl_channel.json  dsl_label.json  dsl_list.json  msg.json  signal_proc.json  toolbar.json
libsigrok/: backend.c  config.h  dsdevice.c  hwdriver.c  lib_main.c  libsigrok-internal.h  libsigrok.h  log.c  log.h  session.c  session_driver.c  std.c  strutil.c
libsigrok/input/: in_wav.c
libsigrok/output/: csv.c
libsigrokdecode/: .gitignore  c_decoder_api.c  config.h  decoder.c  dll_registry.c  dll_registry.h  instance.c  libsigrokdecode-internal.h  libsigrokdecode.h  log.c  log.h  module_sigrokdecode.c  session.c  srd.c  type_decoder.c  version.h
libsigrokdecode/c_decoders/: 4b5b_c.c  a7105_c.c  ac97_c.c  ad5593r_c.c  ad5626_c.c  ad79x0_c.c  adat_c.c  adb_c.c  ade77xx_c.c  adf435x_c.c  adns5020_c.c  adxl345_c.c  afsk_c.c  am230x_c.c  amulet_ascii_c.c  arm_etmv3_c.c  arm_itm_c.c  arm_tpiu_c.c  arp_c.c  as5047_c.c  atsha204a_c.c  aud_c.c  avclan_c.c  avr_isp_c.c  avr_pdi_c.c  bean_c.c  bh1750_c.c  bluetooth_h4_c.c  boost_c.c  c2_c.c  c_decoder_utils.h  caliper_c.c  can_c.c  can_fd_c.c  carrera_c.c  cc1101_c.c  ccd_c.c  cec_c.c  cfp_c.c  cjtag_c.c  (+176 more)
libsigrokdecode/decoders/: test_junk.txt
libsigrokdecode/tests/: _show_anns.py  bootstrap_fuzzers.py  cJSON.h  decoder_test.c  generate_input_bin.py  generate_testdata.py  run_all_tests.py  run_python_decoder.py  run_tests.cmd  run_tests.sh  show_diff.py  test_factory.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
(+701 files in other folders)
